# lakeflow-community-connectors

./: CLAUDE.md  CONTRIBUTING.md  NOTICE  pyproject.toml
.github/workflows/: generate-merged-source-file.yml  publish-testpypi.yml  pylint.yml
libs/: source_loader.py  utils.py
libs/test/: test_spec_parser.py  test_utils.py
pipeline/: ingestion_pipeline.py  lakeflow_python_source.py
pipeline/test/: test_ingestion_pipeline.py
prompts/: create_connector_documentation.md  document_write_back_api_of_source.md  implement_connector.md  implement_write_back_testing.md  test_and_fix_connector.md  understand_and_document_source.md
prompts/templates/: community_connector_doc_template.md  source_api_doc_template.md
sources/example/: _generated_example_python_source.py
sources/github/: _generated_github_python_source.py  github.py
sources/hubspot/: _generated_hubspot_python_source.py  hubspot.py  hubspot_test_utils.py
sources/interface/: README.md  lakeflow_connect.py
tests/: test_suite.py  test_utils.py
tools/community_connector/: pyproject.toml
tools/community_connector/src/databricks/: __init__.py
tools/community_connector/src/databricks/labs/: __init__.py
tools/community_connector/src/databricks/labs/community_connector/: __init__.py  config.py  pipeline_client.py  pipeline_spec_validator.py  repo_client.py
tools/community_connector/src/databricks/labs/community_connector/templates/: ingest_template.py  ingest_template_base.py
tools/community_connector/tests/: __init__.py  test_clients.py  test_pipeline_spec_validator.py
tools/scripts/: README.md  (+1 more)
(+39 files in other folders)
